# ordem-de-servico-pratica

./: README.md
ordens-de-servico-backend/: Cargo.toml  Rocket.toml
ordens-de-servico-backend/src/: main.rs
ordens-de-servico-frontend/: README.md  angular.json  package-lock.json  package.json
ordens-de-servico-frontend/src/: index.html
ordens-de-servico-frontend/src/app/: app.component.spec.ts  app.component.ts
