[package]
name = "orderns-de-servico-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "0.5.0-rc.1"
rocket_codegen = "0.5.0-rc.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres"] }